--- a/Week_1/Task_third/Task_third/Task_Third.csproj
+++ b/Week_1/Task_third/Task_third/Task_Third.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task-1\Main_Task_1.cs" />
     <Compile Include="Task-2\Main_Task_2.cs" />
+    <Compile Include="Task-3\Main_Task_3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -54,6 +55,14 @@
   <ItemGroup>
     <Content Include="Task-1\TextFile.txt" />
     <Content Include="Task-2\CurrentXFile.txt" />
+    <Content Include="Task-3\TestDir\testFile1.txt" />
+    <Content Include="Task-3\TestDir\testFile3.txt" />
+    <Content Include="Task-3\TestDir\testFile2.txt" />
+    <Content Include="Task-3\TestDir\testFolder1\subFile.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Task-3\TestDir\testFolder2\" />
+    <Folder Include="Task-3\TestDir\testFolder3\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
