--- a/Week_1/Task_fourth/Task_fourth/Task_fourth.csproj
+++ b/Week_1/Task_fourth/Task_fourth/Task_fourth.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task_1\FirstStudents.cs" />
+    <Compile Include="Task_1\InitFirstStudents.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
