--- a/Week_1/Task_fourth/Task_fourth/Task_fourth.csproj
+++ b/Week_1/Task_fourth/Task_fourth/Task_fourth.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Task_1\InitFirstStudents.cs" />
     <Compile Include="Task_2\InitSecondStudents.cs" />
     <Compile Include="Task_2\SecondStudents.cs" />
+    <Compile Include="Task_3\InitLuggageDepartment.cs" />
+    <Compile Include="Task_3\LuggageDepartment.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
